force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/IFv2_RoleApproverMapping__mdt.object-meta.xml
<CustomObject>
    <description>This metadata is used to populate roles and approvers for Predefined Workflow Approval Workflow, Personnel Request workflow and MAE Approval request.</description>
    <label>Role Approver Mapping</label>
    <pluralLabel>Role Approver Mappings</pluralLabel>
</CustomObject>