force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/AllowOverride__c.field-meta.xml
<CustomField>
    <fullName>AllowOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this checkbox if the user should be able to override this mapping</inlineHelpText>
    <label>Allow Override</label>
    <type>Checkbox</type>
</CustomField>