force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/ApprovalRoute__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRoute__c</fullName>
    <description>Conditions for personnel request workflow mapping</description>
    <inlineHelpText>Select the condition for loading predefined Approvers and Roles for personnel request workflow</inlineHelpText>
    <label>Approval Route</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>SG CN</fullName>
            </value>
            <value>
                <fullName>SG DE HiP</fullName>
            </value>
            <value>
                <fullName>SG DE St</fullName>
            </value>
            <value>
                <fullName>SG DE St - Students</fullName>
            </value>
            <value>
                <fullName>SGHU, Direct</fullName>
            </value>
            <value>
                <fullName>SGHU, Indirect blue collar</fullName>
            </value>
            <value>
                <fullName>SGHU, Indirect white collar</fullName>
            </value>
            <value>
                <fullName>SGHU, Trainee</fullName>
            </value>
            <value>
                <fullName>SGIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>