force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/Approver11__c.field-meta.xml
<CustomField>
    <fullName>Approver11__c</fullName>
    <description>This is used to enter value to be populated for Approver 10</description>
    <inlineHelpText>Enter value to be populated for Approver 10</inlineHelpText>
    <label>Approver 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>