force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/Approver12__c.field-meta.xml
<CustomField>
    <fullName>Approver12__c</fullName>
    <description>This is used to enter value to be populated for Approver 12</description>
    <inlineHelpText>Enter value to be populated for Approver 12</inlineHelpText>
    <label>Approver 12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>