force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SGMX</fullName>
                <default>true</default>
                <label>SGMX</label>
            </value>
            <value>
                <fullName>SGUS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>