force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/FreightPlant__c.field-meta.xml
<CustomField>
    <fullName>FreightPlant__c</fullName>
    <label>Freight Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HiP</fullName>
                <default>true</default>
                <label>HiP</label>
            </value>
            <value>
                <fullName>RBET</fullName>
            </value>
            <value>
                <fullName>SGHU</fullName>
            </value>
            <value>
                <fullName>SGIN</fullName>
            </value>
            <value>
                <fullName>SGCC</fullName>
            </value>
            <value>
                <fullName>SGCS</fullName>
            </value>
            <value>
                <fullName>SGMX</fullName>
            </value>
            <value>
                <fullName>SGLA</fullName>
            </value>
            <value>
                <fullName>SGES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>