force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/HigherLimit__c.field-meta.xml
<CustomField>
    <fullName>HigherLimit__c</fullName>
    <description>Enter value for higher limit value.</description>
    <inlineHelpText>Enter value for higher limit value.</inlineHelpText>
    <label>Higher Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>