force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/IsIndirectMapping__c.field-meta.xml
<CustomField>
    <fullName>IsIndirectMapping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IndirectMapping</label>
    <type>Checkbox</type>
</CustomField>