force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/LowerLimit__c.field-meta.xml
<CustomField>
    <fullName>LowerLimit__c</fullName>
    <description>Enter the lower limit value for condition.</description>
    <inlineHelpText>Enter the lower limit value for condition.</inlineHelpText>
    <label>Lower Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>