force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/MAEClassification__c.field-meta.xml
<CustomField>
    <fullName>MAEClassification__c</fullName>
    <description>Select the condition for loading Roles and Approvers in MAE Classification.</description>
    <inlineHelpText>Select the condition for loading Roles and Approvers in MAE Classification.</inlineHelpText>
    <label>MAE Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quality-QM</fullName>
            </value>
            <value>
                <fullName>Quality-PUQ</fullName>
            </value>
            <value>
                <fullName>Quality-MOE</fullName>
            </value>
            <value>
                <fullName>Productivity</fullName>
            </value>
            <value>
                <fullName>Capacity</fullName>
            </value>
            <value>
                <fullName>R&amp;D</fullName>
            </value>
            <value>
                <fullName>Plant Maintenance</fullName>
            </value>
            <value>
                <fullName>MAE modification/ flexibilization</fullName>
            </value>
            <value>
                <fullName>MAE Maintenance (replacement)</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>BAU</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>