force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/PersonnelType__c.field-meta.xml
<CustomField>
    <fullName>PersonnelType__c</fullName>
    <description>Personnel Type field in personnel request for special working condition mapping</description>
    <inlineHelpText>Select the Personnel Type field in personnel request for special working condition mapping</inlineHelpText>
    <label>Personnel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Non-tariff</fullName>
            </value>
            <value>
                <fullName>Special working conditions – Abschlussarbeiten / wissenschaftliche Arbeiten</fullName>
            </value>
            <value>
                <fullName>Special working conditions – Doktoranden</fullName>
            </value>
            <value>
                <fullName>Special working conditions – Leasing</fullName>
            </value>
            <value>
                <fullName>Special working conditions – Praktikant</fullName>
            </value>
            <value>
                <fullName>Special working conditions – Praxisstudenten</fullName>
            </value>
            <value>
                <fullName>Special working conditions – Sonstiges</fullName>
            </value>
            <value>
                <fullName>Tariff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>