force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>This is used to fill region filed for mapping</description>
    <inlineHelpText>Select the region to for mapping.</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>LA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>