force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/Role01__c.field-meta.xml
<CustomField>
    <fullName>Role01__c</fullName>
    <description>This field is used to enter value of role to be populated for mapping</description>
    <inlineHelpText>Enter value for Role1 to be populated</inlineHelpText>
    <label>Role 01</label>
    <length>255</length>
    <type>Text</type>
</CustomField>