force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/Role02__c.field-meta.xml
<CustomField>
    <fullName>Role02__c</fullName>
    <description>This field is used to enter value of role to be populated for mapping</description>
    <inlineHelpText>Enter Role02 to be populated for mapping.</inlineHelpText>
    <label>Role 02</label>
    <length>255</length>
    <type>Text</type>
</CustomField>