force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/Role03__c.field-meta.xml
<CustomField>
    <fullName>Role03__c</fullName>
    <description>This field is used to enter value of role to be populated for mapping</description>
    <inlineHelpText>Enter value of role to be populated.</inlineHelpText>
    <label>Role 03</label>
    <length>255</length>
    <type>Text</type>
</CustomField>