force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <description>This is used for selecting Subcategory field for mapping</description>
    <inlineHelpText>Select Subcategory for mapping</inlineHelpText>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alternadpr (CV/DT)</fullName>
            </value>
            <value>
                <fullName>Aprovação de embalagem de peças compradas (outros GB&apos;s)</fullName>
            </value>
            <value>
                <fullName>Banco do Brasil</fullName>
            </value>
            <value>
                <fullName>Bradesco</fullName>
            </value>
            <value>
                <fullName>CEF</fullName>
            </value>
            <value>
                <fullName>Citibank</fullName>
            </value>
            <value>
                <fullName>Dentro da empresa</fullName>
            </value>
            <value>
                <fullName>Deutsche</fullName>
            </value>
            <value>
                <fullName>Entre empresas</fullName>
            </value>
            <value>
                <fullName>Entre plantas</fullName>
            </value>
            <value>
                <fullName>Itau</fullName>
            </value>
            <value>
                <fullName>Liberação AA =&gt; GE e CV-GE</fullName>
            </value>
            <value>
                <fullName>Liberação AA =&gt; ST, CV-ST e BPL</fullName>
            </value>
            <value>
                <fullName>Liberação OE =&gt; GE e CV-GE</fullName>
            </value>
            <value>
                <fullName>Liberação OE =&gt; ST, CV-ST e BPL</fullName>
            </value>
            <value>
                <fullName>Motor de Partoda (ST)</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Santander</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>