force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/TravelType__c.field-meta.xml
<CustomField>
    <fullName>TravelType__c</fullName>
    <label>Travel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business - Domestic</fullName>
                <default>true</default>
                <label>Business - Domestic</label>
            </value>
            <value>
                <fullName>Business - Overseas</fullName>
            </value>
            <value>
                <fullName>Home trip - Overseas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>