force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/ValueBRL__c.field-meta.xml
<CustomField>
    <fullName>ValueBRL__c</fullName>
    <label>Value BRL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>