force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/ValueCNY__c.field-meta.xml
<CustomField>
    <fullName>ValueCNY__c</fullName>
    <label>Value CNY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>