force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/ValueEur__c.field-meta.xml
<CustomField>
    <fullName>ValueEur__c</fullName>
    <label>Value Eur</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>