force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/ValueINR__c.field-meta.xml
<CustomField>
    <fullName>ValueINR__c</fullName>
    <label>Value INR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>