force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/ValueUSD__c.field-meta.xml
<CustomField>
    <fullName>ValueUSD__c</fullName>
    <label>Value USD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>