force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/WorkflowName__c.field-meta.xml
<CustomField>
    <fullName>WorkflowName__c</fullName>
    <label>Workflow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>