force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/fields/Workflows__c.field-meta.xml
<CustomField>
    <fullName>Workflows__c</fullName>
    <description>This is to select to which workflow this record is related to.</description>
    <inlineHelpText>Select to which workflow this record is related to.</inlineHelpText>
    <label>Workflows</label>
    <referenceTo>IFv2_Workflows__mdt</referenceTo>
    <relationshipName>Predefined_Workflow_Approval_Mapping</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>