force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/listViews/ALLRecords.listView-meta.xml
<ListView>
    <fullName>ALLRecords</fullName>
    <columns>MasterLabel</columns>
    <columns>Workflows__c</columns>
    <columns>WorkflowName__c</columns>
    <columns>ApprovalRoute__c</columns>
    <columns>Role01__c</columns>
    <columns>Role02__c</columns>
    <columns>Role03__c</columns>
    <columns>Role04__c</columns>
    <columns>Approver4__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL Records</label>
    <language>en_US</language>
</ListView>