force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/listViews/MAEApprovalRequest.listView-meta.xml
<ListView>
    <fullName>MAEApprovalRequest</fullName>
    <columns>MasterLabel</columns>
    <columns>Workflows__c</columns>
    <columns>DeveloperName</columns>
    <columns>MAEClassification__c</columns>
    <columns>LowerLimit__c</columns>
    <columns>HigherLimit__c</columns>
    <columns>Role01__c</columns>
    <columns>Approver1__c</columns>
    <columns>Role02__c</columns>
    <columns>Approver2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WorkflowName__c</field>
        <operation>contains</operation>
        <value>CapEx</value>
    </filters>
    <label>CapEx Approval Request</label>
    <language>en_US</language>
</ListView>