force-app/main/default/objects/IFv2_RoleApproverMapping__mdt/listViews/PredefinedWorkflow.listView-meta.xml
<ListView>
    <fullName>PredefinedWorkflow</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Region__c</columns>
    <columns>PredefinedWorkflow__c</columns>
    <columns>Subcategory__c</columns>
    <columns>Role01__c</columns>
    <columns>Approver1__c</columns>
    <columns>Role02__c</columns>
    <columns>Approver2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Workflows__c</field>
        <operation>startsWith</operation>
        <value>Predefined</value>
    </filters>
    <label>Predefined Workflow</label>
    <language>en_US</language>
</ListView>